ML class 3 python.txt
>>> import numpy
>>> import matplotlib
>>> import scipy
>>> import scikit-learn
  File "<stdin>", line 1
    import scikit-learn
                 ^
SyntaxError: invalid syntax
>>> import sklearn
>>> import numpy as np
>>> 
>>> 
>>> x= np.array([-2,-1,2,3])
>>> t=np.array([1,0,3,5])
>>> y = 0.85*x+1.9
>>> y
array([0.2 , 1.05, 3.6 , 4.45])
>>> t
array([1, 0, 3, 5])
>>> t-y
array([ 0.8 , -1.05, -0.6 ,  0.55])
>>> (t-y)**2
array([0.64  , 1.1025, 0.36  , 0.3025])
>>> sum((t-y)**2)
2.405
>>> 
>>> 
>>> 
>>> 
>>> x
array([-2, -1,  2,  3])
>>> np.sum(x)
2
>>> sum(x)
2
>>> np.mean(x)
0.5
>>> 
>>> 
>>> 
>>> x = np.array([1,2,3,4,5])
>>> np.var(x)
2.0
>>> np.var(np.array([10,20,30,40,50])
... )
200.0
>>> 
>>> y = np.array([10,20,15,42,55])
>>> np.cov(x,y)
array([[  2.5,  28. ],
       [ 28. , 370.3]])
>>> 
>>> z= np.array([8,7,6,5,2])
>>> np.cov(x,z)
array([[ 2.5, -3.5],
       [-3.5,  5.3]])
>>> np.linspace(-5,5,10)
array([-5.        , -3.88888889, -2.77777778, -1.66666667, -0.55555556,
        0.55555556,  1.66666667,  2.77777778,  3.88888889,  5.        ])
>>> np.linspace(-5,5,20)
array([-5.        , -4.47368421, -3.94736842, -3.42105263, -2.89473684,
       -2.36842105, -1.84210526, -1.31578947, -0.78947368, -0.26315789,
        0.26315789,  0.78947368,  1.31578947,  1.84210526,  2.36842105,
        2.89473684,  3.42105263,  3.94736842,  4.47368421,  5.        ])
>>> np.linspace(-5,5,30)
array([-5.        , -4.65517241, -4.31034483, -3.96551724, -3.62068966,
       -3.27586207, -2.93103448, -2.5862069 , -2.24137931, -1.89655172,
       -1.55172414, -1.20689655, -0.86206897, -0.51724138, -0.17241379,
        0.17241379,  0.51724138,  0.86206897,  1.20689655,  1.55172414,
        1.89655172,  2.24137931,  2.5862069 ,  2.93103448,  3.27586207,
        3.62068966,  3.96551724,  4.31034483,  4.65517241,  5.        ])
>>> x
array([1, 2, 3, 4, 5])
>>> x=np.linspace(-5,5,30)
>>> x
array([-5.        , -4.65517241, -4.31034483, -3.96551724, -3.62068966,
       -3.27586207, -2.93103448, -2.5862069 , -2.24137931, -1.89655172,
       -1.55172414, -1.20689655, -0.86206897, -0.51724138, -0.17241379,
        0.17241379,  0.51724138,  0.86206897,  1.20689655,  1.55172414,
        1.89655172,  2.24137931,  2.5862069 ,  2.93103448,  3.27586207,
        3.62068966,  3.96551724,  4.31034483,  4.65517241,  5.        ])
>>> y= x**2
>>> import matplotlib.pyplot as plt
Unable to revert mtime: /Library/Fonts
>>> import matplotlib
>>> import matplotlib.pyplot
>>> import matplotlib.pyplot as plt
>>> 
